@@ -3,4 +3,4 @@ File "pr7620_bad.ml", line 10, characters 17-19:
                       ^^
 Error: This pattern matches values of type "[? `B ]"
        but a pattern was expected which matches values of type "[ `A ]"
-       Types for tag "`B" are incompatible
+       The second variant type does not allow tag(s) "`B"
